; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ocsp/extr_ocsp_srv.c_OCSP_id_get0_info.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ocsp/extr_ocsp_srv.c_OCSP_id_get0_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OCSP_id_get0_info(i32** %0, i32** %1, i32** %2, i32** %3, %struct.TYPE_5__* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32**, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i32**, align 8
  %11 = alloca %struct.TYPE_5__*, align 8
  store i32** %0, i32*** %7, align 8
  store i32** %1, i32*** %8, align 8
  store i32** %2, i32*** %9, align 8
  store i32** %3, i32*** %10, align 8
  store %struct.TYPE_5__* %4, %struct.TYPE_5__** %11, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %13 = icmp ne %struct.TYPE_5__* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %46

15:                                               ; preds = %5
  %16 = load i32**, i32*** %8, align 8
  %17 = icmp ne i32** %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %15
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 3
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = load i32**, i32*** %8, align 8
  store i32* %22, i32** %23, align 8
  br label %24

24:                                               ; preds = %18, %15
  %25 = load i32**, i32*** %7, align 8
  %26 = icmp ne i32** %25, null
  br i1 %26, label %27, label %31

27:                                               ; preds = %24
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 2
  %30 = load i32**, i32*** %7, align 8
  store i32* %29, i32** %30, align 8
  br label %31

31:                                               ; preds = %27, %24
  %32 = load i32**, i32*** %9, align 8
  %33 = icmp ne i32** %32, null
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 1
  %37 = load i32**, i32*** %9, align 8
  store i32* %36, i32** %37, align 8
  br label %38

38:                                               ; preds = %34, %31
  %39 = load i32**, i32*** %10, align 8
  %40 = icmp ne i32** %39, null
  br i1 %40, label %41, label %45

41:                                               ; preds = %38
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %11, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = load i32**, i32*** %10, align 8
  store i32* %43, i32** %44, align 8
  br label %45

45:                                               ; preds = %41, %38
  store i32 1, i32* %6, align 4
  br label %46

46:                                               ; preds = %45, %14
  %47 = load i32, i32* %6, align 4
  ret i32 %47
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
